@@ -16,7 +16,8 @@ import javax.script.ScriptEngine;
 import javax.script.ScriptEngineManager;
 import javax.script.SimpleBindings;
 import java.io.File;
-import java.io.FileReader;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.Map;
@@ -91,10 +92,12 @@ public final class ScriptingUtils {
      * @param <T>       the type parameter
      * @param script    the script
      * @param variables the variables
+     * @param clazz     the clazz
      * @return the t
      */
     public static <T> T executeGroovyShellScript(final String script,
-                                                 final Map<String, Object> variables) {
+                                                 final Map<String, Object> variables,
+                                                 final Class<T> clazz) {
         try {
             final Binding binding = new Binding();
             final GroovyShell shell = new GroovyShell(binding);
@@ -105,7 +108,15 @@ public final class ScriptingUtils {
                 binding.setVariable("logger", LOGGER);
             }
             LOGGER.debug("Executing groovy script [{}] with variables [{}]", script, binding.getVariables());
-            return (T) shell.evaluate(script);
+
+            final Object result = shell.evaluate(script);
+            if (!clazz.isAssignableFrom(result.getClass())) {
+                throw new ClassCastException("Result [" + result
+                    + " is of type " + result.getClass()
+                    + " when we were expecting " + clazz);
+            }
+            return (T) result;
+
         } catch (final Exception e) {
             LOGGER.error(e.getMessage(), e);
         }
@@ -155,8 +166,9 @@ public final class ScriptingUtils {
     public static <T> T executeGroovyScript(final Resource groovyScript,
                                             final String methodName,
                                             final Class<T> clazz) {
-        return executeGroovyScript(groovyScript, methodName, new Object[] {}, clazz);
+        return executeGroovyScript(groovyScript, methodName, new Object[]{}, clazz);
     }
+
     /**
      * Execute groovy script t.
      *
@@ -188,7 +200,7 @@ public final class ScriptingUtils {
                 final Class<?> groovyClass = loader.parseClass(groovyFile);
                 LOGGER.trace("Creating groovy object instance from class [{}]", groovyFile.getCanonicalPath());
 
-                final GroovyObject groovyObject = (GroovyObject) groovyClass.newInstance();
+                final GroovyObject groovyObject = (GroovyObject) groovyClass.getDeclaredConstructor().newInstance();
 
                 LOGGER.trace("Executing groovy script's [{}] method, with parameters [{}]", methodName, args);
                 final T result = (T) groovyObject.invokeMethod(methodName, args);
@@ -213,9 +225,10 @@ public final class ScriptingUtils {
      * @param <T>        the type parameter
      * @param scriptFile the script file
      * @param args       the args
+     * @param clazz      the clazz
      * @return the t
      */
-    public static <T> T executeGroovyScriptEngine(final String scriptFile, final Object[] args) {
+    public static <T> T executeGroovyScriptEngine(final String scriptFile, final Object[] args, final Class<T> clazz) {
         try {
             final String engineName = getScriptEngineName(scriptFile);
             final ScriptEngine engine = new ScriptEngineManager().getEngineByName(engineName);
@@ -229,7 +242,7 @@ public final class ScriptingUtils {
             if (theScriptFile.exists()) {
                 LOGGER.debug("Created object instance from class [{}]", theScriptFile.getCanonicalPath());
 
-                engine.eval(new FileReader(theScriptFile));
+                engine.eval(Files.newBufferedReader(theScriptFile.toPath(), StandardCharsets.UTF_8));
                 final Invocable invocable = (Invocable) engine;
 
                 LOGGER.debug("Executing script's run method, with parameters [{}]", args);
